<resources>
    <!-- Other information -->
    <string name="app_name">Who$e Tab</string>
    <string name="action_settings">Settings</string>
    <string name ="at"> at </string>
    <string name="forperson"> for </string>
    <string name="change_date">Edit Date</string>
    <string name="change_time">Edit Time</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="name_single">Name: %1$s</string>
    <string name="name_1">%1$s</string>
    <string name="name_2">%1$s</string>
    <string name="compare_words">Who\'s tabs would you like to compare?</string>

    <!-- Transaction menu -->
    <string name="new_transaction">Add</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s Transactions</string>
    <string name="subtitle_item_format">%1$s Items</string>
    <string name="view_add_trans">View/Add Transactions</string>

    <!-- Place information -->
    <string name="place_name_hint">Place Name</string>
    <string name="place_address_hint">Place Address</string>
    <string name="spinner_restraunts">Places</string>
    <string name="place_spinner_hint">Choose Place</string>
    <string name="add_place">Add Place</string>
    <string name="edit_place">Edit/Delete Place</string>
    <string name="find_place">Find Place with Google</string>

    <!-- Type information -->
    <string name="type_name_hint">Category Name</string>
    <string name="spinner_types">Category</string>
    <string name="type_spinner_hint">Choose Category</string>
    <string name="add_type">Add Category</string>
    <string name="edit_type">Edit/Delete Category</string>
    <string name="single_view">View Balance</string>

    <!-- Time information -->
    <string name="date_picker_title">Date of Purchase:</string>


    <!-- Item Information -->
    <string name="new_item">New Item</string>
    <string name="add_item">Add Items</string>
    <string name="view_summary">View Summary</string>
    <string name="item_intro">This purchase has </string>
    <string name="number_of_items">%1$s items.</string>
    <string name="compare">Compare Tabs</string>
    <string name="total_items">Total Number of Items: %1$s</string>
    <string name="item_number">%1$s</string>
    <string name="total_price">Total Cost: $ %1$s</string>
    <string name="items_people">Participants:</string>

</resources>
