<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total_items"
        android:text = "@string/total_items"
        android:textColor="@color/Red"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/items_price"
    android:textColor="@color/Red"
    android:text = "@string/total_price"
    android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/items_people"
        android:id="@+id/participants"
        android:layout_marginBottom="8dp"
        android:textColor="@color/Red"
        android:textSize="18sp"/>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_list"
        />



</LinearLayout>