<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bill_with_long_lines">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text = "@string/app_name"
        android:layout_marginTop="10dp"
        android:textSize="50dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/Red"
        android:layout_centerHorizontal="true"
        android:background="@color/White"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_add_trans"
            android:layout_alignParentLeft = "true"
            android:text="@string/view_add_trans"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/button_with_outline"
            android:layout_below="@id/title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/single_person"
        android:text = "@string/single_view"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
 />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/compare"
        android:background="@drawable/button_with_outline"
        android:text="@string/compare"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_with_outline"
    android:textStyle="bold"
    android:textSize="20sp"
/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_outline"
        android:textStyle="bold"
        android:textSize="20sp"
        />



</LinearLayout>